[tool.poetry]
name = "riscv_asm"
version = "0.1.0"
description = ""
authors = ["James Schwartz <jbschwartz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.930"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pydocstyle]
match = '(?!test_).*\.py'
# Turn off module (D100) and __init__ (D107) docstrings.
# Ignore blank line before class docstring (D203) and docstrings start on the first line (D213).
ignore = "D100, D107, D213, D203"

[tool.pylint.'MESSAGES CONTROL']
# Turn off checking of invalid names (C0103), module docstrings (C0114), and TODO comments (W0511).
disable = "C0103, C0114, W0511"
ignore-patterns='test_.*?py'

[tool.coverage]
run.omit = ["*/test_*.py"]
report.precision = 2
report.exclude_lines = [
    "@overload",
]

[tool.pytest.ini_options]
addopts = "--tb=short --cov"
